--- a/我本是个文艺青年/说人生.md
+++ b/我本是个文艺青年/说人生.md
@@ -9,3 +9,57 @@
 闲来笑浮生悬笔一卷入毫端，朱绂临身可与言者不过二三。
 
 **一切愚昧源于无知，而一切无知源于自身的所处的高度**
+
+
+
+如果你在一个小地方。
+
+三十岁不结婚，你就是怪物。
+
+结了婚不生孩子，你就是怪物。
+
+女喜欢女，男喜欢男，你就是怪物。
+
+好好的事业单位不干，你就是怪物。
+
+你大学毕业后不考研，你也是怪物。
+
+你夏天穿个超短裙，你个不要脸怪物。
+
+你花俩月工资纹个花臂，真他妈怪物。
+
+你有钱竟然不买房，你是个傻逼怪物。
+
+说实话，小地方怪物真不多，为什么？
+
+因为小地方不允许怪物存在啊，
+
+你若是个怪物，你就完蛋了，
+
+人人都要挽救你，教育你，随时随地，
+
+为了你好，他们要你变成跟他们一样的人。
+
+一个人教育你还好，
+
+说不定你还能对抗一下，过过招儿，
+
+但10个人100个人都要教育你时，
+
+孤立无援的你，会彻底崩掉，
+
+每次被教育后你可能都要经历一个
+
+漫长得像一生一世的难眠之夜。
+
+嘿，如果你是怪物，去大城市吧。
+
+去看世界吧
+
+那里的人都很忙，没时间拯救你，
+
+你唯一需要对抗的就是你自己。
+
+别让任何人，糟蹋了你的人生，
+
+你的人生，要毁也要毁在自己手里。
