--- a/celery/1.安装配置与简单案例.md
+++ b/celery/1.安装配置与简单案例.md
@@ -41,10 +41,6 @@ Celery 扮演生产者和消费者的角色,
 
 <b>Result Backend </b>: 任务处理完成之后保存状态信息和结果, 以供查询.
 
-结构图:
-
-![图](../images/celery结构图.png)
-
 ### 3. 消息代理
 
 生产环境的消息代理有 RabbitMQ 和 Redis, 官方推荐 RabbitMQ.
@@ -65,10 +61,6 @@ Celery 扮演生产者和消费者的角色,
 
 
 ### 5. 配置
-
-项目结构图如下:
-
-![图](../images/celery项目图.png)
 
 
 <b>在settings.py文件下定义</b>:
@@ -150,11 +142,11 @@ Celery 扮演生产者和消费者的角色,
 ​	    # delay 返回的是一个 AsyncResult 对象，里面存的就是一个异步的结果，
 ​	    # 当任务完成时result.ready() 为 true，然后用 result.get() 取结果即可
 ​	
-	    # 发出request后异步执行该task, 马上返回response, 从而不阻塞该request,
-	    # 使用户有一个流畅的访问过程.那么, 我们可以使用.delay,
-	    add.delay(3, 5)
-	    # Celery会将task加入到queue中, 并马上返回.而在一旁待命的worker看到该task后, 便会按照设定执行它, 并将他从queue中移除
-	    return HttpResponse("假装操作很耗时，不等了")
+​	    # 发出request后异步执行该task, 马上返回response, 从而不阻塞该request,
+​	    # 使用户有一个流畅的访问过程.那么, 我们可以使用.delay,
+​	    add.delay(3, 5)
+​	    # Celery会将task加入到queue中, 并马上返回.而在一旁待命的worker看到该task后, 便会按照设定执行它, 并将他从queue中移除
+​	    return HttpResponse("假装操作很耗时，不等了")
 
 ### 6. 启动项目
 
@@ -167,30 +159,4 @@ Celery 扮演生产者和消费者的角色,
 启动flower命令:
 
 	python manage.py celery flower --address=127.0.0.1 --port=5555 
-	命令中adderss和port参数可以不用填写，默认启动的IP地址为127.0.0.1，默认端口为5555
-
-启动命令，控制台中信息的展示，如下图所示:
-
-![图](../images/celery启动命令控制效果图.png)
-
-项目启动命令启动后，redis中执行任务情况如下图所示:
-
-![图](../images/celery-redis中参数.png)
-
-<b style="color:red;">注意</b>: 若任务被修改，Celery 需要重新启动，否则无法随之更改
-
-### 7. 可视化监控队列工具
-
-
-flower任务窗口界面截图:
-
-![图](../images/flower_tasks.png)
-
-flower信息中间件界面截图:
-
-![图](../images/flower_broker.png)
-
-
-flower信息消费情况界面截图:
-
-![图](../images/flower_worker.png)
+	命令中adderss和port参数可以不用填写，默认启动的IP地址为127.0.0.1，默认端口为5555![图](../images/flower_worker.png)
