--- a/my_sql/简单的命令.md
+++ b/my_sql/简单的命令.md
@@ -5,6 +5,7 @@
 ------
 
 ## 数据库操作
+
 -------
 ### 连接数据库
 
@@ -12,7 +13,7 @@
 mysql -u用户名 -p
 mysql -h127.0.0.1 -uroot -p123456
 # -h放的是链接地址
-# -P是端口
+# -P(大写)是端口
 ```
 
 ### 显示时间
@@ -43,8 +44,7 @@ drop database 数据库名;
 select database();
 ```
 
-
-### 使用;切换数据库
+### 使用切换数据库
 
 ```sql
 use 数据库名;
