--- a/Python/高级语法/再谈装饰器.md
+++ b/Python/高级语法/再谈装饰器.md
@@ -1,5 +1,3 @@
-# 装饰器
-
 我们知道，在 Python 中，我们可以像使用变量一样使用函数：
 
 - 函数可以被赋值给其他变量
@@ -8,20 +6,20 @@
 - 函数可以作为参数传递给另外一个函数
 - 函数可以作为另一个函数的返回
 
-**简而言之，函数就是一个对象**。
+**简而言之，`函数就是一个对象`**。
 
-# 对一个简单的函数进行装饰
+## 对一个简单的函数进行装饰
 
-为了更好地理解装饰器，我们先从一个简单的例子开始，假设有下面的函数：
+我们已经在《[闭包和装饰器](/article/4/ "闭包和装饰器")》一文中给大家的一个文本加html标签的例子:
 
-```
+```python
 def hello():
     return 'hello world'
 ```
 
 现在我们想增强 `hello()` 函数的功能，希望给返回加上 HTML 标签，比如 `<i>hello world</i>`，但是有一个要求，不改变原来 `hello()` 函数的定义。这里当然有很多种方法，下面给出一种跟本文相关的方法：
 
-```
+```python
 def makeitalic(func):
     def wrapped():
         return "<i>" + func() + "</i>"
@@ -36,7 +34,7 @@ def makeitalic(func):
 
 现在，我们就可以不改变 `hello()` 函数的定义，给返回加上 HTML 标签了：
 
-```
+```python
 >>> hello = makeitalic(hello)  # 将 hello 函数传给 makeitalic
 >>> hello()
 '<i>hello world</i>'
@@ -46,7 +44,7 @@ def makeitalic(func):
 
 不过要注意的是，由于我们将 `makeitalic` 的返回赋给了 `hello`，此时 `hello()` 函数仍然存在，但是它的函数名不再是 hello 了，而是 wrapped，正是 `makeitalic` 返回函数的名称，可以验证一下：
 
-```
+```python
 >>> hello.__name__
 'wrapped'
 ```
@@ -55,7 +53,7 @@ def makeitalic(func):
 
 现在，我们梳理一下上面的例子，为了增强原函数 `hello` 的功能，我们定义了一个函数，它接收原函数作为参数，并返回一个新的函数，完整的代码如下：
 
-```
+```python
 def makeitalic(func):
     def wrapped():
         return "<i>" + func() + "</i>"
@@ -71,7 +69,7 @@ hello = makeitalic(hello)
 
 一般情况下，我们使用装饰器提供的 `@` 语法糖（Syntactic Sugar），来简化上面的写法：
 
-```
+```python
 def makeitalic(func):
     def wrapped():
         return "<i>" + func() + "</i>"
@@ -88,7 +86,7 @@ def hello():
 
 - 装饰器的一般使用形式如下：
 
-```
+```python
 @decorator
 def func():
     pass
@@ -96,7 +94,7 @@ def func():
 
 等价于下面的形式：
 
-```
+```python
 def func():
     pass
 func = decorator(func)
@@ -104,7 +102,7 @@ func = decorator(func)
 
 - 装饰器可以定义多个，离函数定义最近的装饰器先被调用，比如：
 
-```
+```python
 @decorator_one
 @decorator_two
 def func():
@@ -113,7 +111,7 @@ def func():
 
 等价于：
 
-```
+```python
 def func():
     pass
 
@@ -122,7 +120,7 @@ func = decorator_one(decorator_two(func))
 
 - 装饰器还可以带参数，比如：
 
-```
+```python
 @decorator(arg1, arg2)
 def func():
     pass
@@ -130,7 +128,7 @@ def func():
 
 等价于：
 
-```
+```python
 def func():
     pass
 
@@ -143,7 +141,7 @@ func = decorator(arg1, arg2)(func)
 
 前面的例子中，被装饰的函数 `hello()` 是没有带参数的，我们看看被装饰函数带参数的情况。对前面例子中的 `hello()` 函数进行改写，使其带参数，如下：
 
-```
+```python
 def makeitalic(func):
     def wrapped(*args, **kwargs):
         ret = func(*args, **kwargs)
@@ -165,7 +163,7 @@ def hello2(name1, name2):
 
 看看使用：
 
-```
+```python
 >>> hello('python')
 '<i>hello python</i>'
 >>> hello2('python', 'java')
@@ -176,7 +174,7 @@ def hello2(name1, name2):
 
 上面的例子，我们增强了函数 `hello` 的功能，给它的返回加上了标签 `<i>...</i>`，现在，我们想改用标签 `<b>...</b>` 或 `<p>...</p>`。是不是要像前面一样，再定义一个类似 `makeitalic` 的装饰器呢？其实，我们可以定义一个函数，将标签作为参数，返回一个装饰器，比如：
 
-```
+```python
 def wrap_in_tag(tag):
     def decorator(func):
         def wrapped(*args, **kwargs):
@@ -189,7 +187,7 @@ def wrap_in_tag(tag):
 
 现在，我们可以根据需要生成想要的装饰器了：
 
-```
+```python
 makebold = wrap_in_tag('b')  # 根据 'b' 返回 makebold 生成器
 
 @makebold
@@ -202,7 +200,7 @@ def hello(name):
 
 上面的形式也可以写得更加简洁：
 
-```
+```python
 @wrap_in_tag('b')
 def hello(name):
     return 'hello %s' % name
@@ -214,7 +212,7 @@ def hello(name):
 
 现在，让我们来看看多个装饰器的例子，为了简单起见，下面的例子就不使用带参数的装饰器。
 
-```
+```python
 def makebold(func):
     def wrapped():
         return '<b>' + func() + '</b>'
@@ -235,7 +233,7 @@ def hello():
 
 上面定义了两个装饰器，对 `hello` 进行装饰，上面的最后几行代码相当于：
 
-```
+```python
 def hello():
     return 'hello world'
 
@@ -244,7 +242,7 @@ hello = makebold(makeitalic(hello))
 
 调用函数 `hello`：
 
-```
+```python
 >>> hello()
 '<b><i>hello world</i></b>'
 ```
@@ -253,7 +251,7 @@ hello = makebold(makeitalic(hello))
 
 前面的装饰器都是一个函数，其实也可以基于类定义装饰器，看下面的例子：
 
-```
+```python
 class Bold(object):
     def __init__(self, func):
         self.func = func
@@ -276,7 +274,7 @@ def hello(name):
 
 还可以让类装饰器带参数：
 
-```
+```python
 class Tag(object):
     def __init__(self, tag):
         self.tag = tag
@@ -299,7 +297,7 @@ def hello(name):
 
 前面提到，使用装饰器有一个瑕疵，就是被装饰的函数，它的函数名称已经不是原来的名称了，回到最开始的例子：
 
-```
+```python
 def makeitalic(func):
     def wrapped():
         return "<i>" + func() + "</i>"
@@ -312,14 +310,14 @@ def hello():
 
 函数 `hello` 被 `makeitalic` 装饰后，它的函数名称已经改变了：
 
-```
+```python
 >>> hello.__name__
 'wrapped'
 ```
 
 为了消除这样的副作用，Python 中的 functool 包提供了一个 wraps 的装饰器：
 
-```
+```python
 from functools import wraps
 
 def makeitalic(func):
