--- a/Python/高级语法/迭代器.md
+++ b/Python/高级语法/迭代器.md
@@ -4,8 +4,9 @@
 
 ## 1、什么是可迭代对象(Iterable)
 
-　　> 集合数据类型，如 list 、tuple、dict、set、str 等
-　　> 生成器和带yield 的generator function
+> 一类是：集合数据类型，如 list 、tuple、dict、set、str 等
+>
+> 一类是：生成器和带yield 的generator function
 
 ## 2、如何判断对象可迭代？
 ```python
@@ -31,5 +32,14 @@ from collections import Iterator
 isinstance((x for x in range(10)),Iterator)  # True
 
 ```
+## 4、小结
+**凡是可作用于for循环的对象都是可迭代数据类型；**
 
+**凡是可作用于next()函数的对象都是迭代器类型，它们表示一个惰性计算的序列；**
+
+**集合数据类型如list、dict、str等是迭代类型数据但不是迭代器，不过可以通过iter()函数获得一个数据对象。**
+
+因为Python的迭代器对象表示的是一个数据流，迭代器对象可以被next()函数调用并不断返回下一个数据，直到没有数据时抛出StopIteration错误。可以把这个数据流看做是一个有序序列，但我们却不能提前知道序列的长度，只能不断通过next()函数实现按需计算下一个数据，所以迭代器的计算是惰性的，只有在需要返回下一个数据时它才会计算。
+
+迭代器甚至可以表示一个无限大的数据流，例如全体自然数。而使用list是永远不可能存储全体自然数的。
 
