--- a/WEB安全和Kali/常见三大加密算法.md
+++ b/WEB安全和Kali/常见三大加密算法.md
@@ -1,32 +1,35 @@
 # 常见的三大加密算法
-
 加密，是以某种特殊的算法改变原有的信息数据，使得未授权的用户即使获得了已加密的信息，但因不知解密的方法，仍然无法了解信息的内容。
-
 加密建立在对信息进行数学编码和解码的基础上。加密类型分为两种，对称加密与非对称加密，对称加密双方采用共同密钥，（当然这个密钥是需要对外保密的），这里讲一下非对称加密，这种加密方式存在两个密钥，密钥 -- 一种是公共密钥（正如其名，这是一个可以公开的密钥值），一种是私人密钥（对外保密）。 您发送信息给我们时，使用公共密钥加密信息。 一旦我们收到您的加密信息，我们则使用私人密钥破译信息密码（被我们的公钥加密的信息，只有我们的唯一的私钥可以解密，这样，就在技术上保证了这封信只有我们才能解读——因为别人没有我们的私钥）。 使用私人密钥加密的信息只能使用公共密钥解密（这一功能应用与数字签名领域，我的私钥加密的数据，只有我的公钥可以解读，具体内容参考数字签名的信息）反之亦然，以确保您的信息安全。
 
 **1. 加密算法之 MD5 算法**
 
-  MD5 的全称是 Message-Digest Algorithm 5，在 90 年代初由 MIT 的计算机科学实验室和 RSA Data Security Inc 发明，经 MD2、MD3 和 MD4 发展而来。
-         MD5 将任意长度的 “字节串” 变换成一个 128bit 的大整数，并且它是一个不可逆的字符串变换算法，换句话说就是，即使你看到源程序和算法描述，也无法将一个 MD5 的值变换回原始的字符串，从数学原理上说，是因为原始的字符串有无穷多个，这有点象不存在反函数的数学函数。 MD5 的典型应用是对一段 Message(字节串)产生 fingerprint(指纹)，以防止被“篡改”。举个例子，你将一段话写在一个叫 readme.txt 文件中，并对这个 readme.txt 产生一个 MD5 的值并记录在案，然后你可以传播这个文件给别人，别人如果修改了文件中的任何内容，你对这个文件重新计算 MD5 时就会发现。如果再有一个第三方的认证机构，用 MD5 还可以防止文件作者的“抵赖”，这就是所谓的数字签名应用。
+MD5 的全称是 Message-Digest Algorithm 5，在 90 年代初由 MIT 的计算机科学实验室和 RSA Data Security Inc 发明，经 MD2、MD3 和 MD4 发展而来。
 
-  MD5 还广泛用于加密和解密技术上，在很多操作系统中，用户的密码是以 MD5 值（或类似的其它算法）的方式保存的， 用户 Login 的时候，系统是把用户输入的密码计算成 MD5 值，然后再去和系统中保存的 MD5 值进行比较，而系统并不 “知道” 用户的密码是什么。在一些初始化处理后，MD5 以 512 位分组来处理输入文本，每一分组又划分为 16 个 32 位子分组。算法的输出由四个 32 位分组组成，将它们级联形成一个 128 位散列值。 
+MD5 将任意长度的 “字节串” 变换成一个 128bit 的大整数，并且它是一个不可逆的字符串变换算法，换句话说就是，即使你看到源程序和算法描述，也无法将一个 MD5 的值变换回原始的字符串，从数学原理上说，是因为原始的字符串有无穷多个，这有点象不存在反函数的数学函数。 MD5 的典型应用是对一段 Message(字节串)产生 fingerprint(指纹)，以防止被“篡改”。举个例子，你将一段话写在一个叫 readme.txt 文件中，并对这个 readme.txt 产生一个 MD5 的值并记录在案，然后你可以传播这个文件给别人，别人如果修改了文件中的任何内容，你对这个文件重新计算 MD5 时就会发现。如果再有一个第三方的认证机构，用 MD5 还可以防止文件作者的“抵赖”，这就是所谓的数字签名应用。
 
-首先填充消息使其长度恰好为一个比 512 位的倍数仅小 64 位的数。填充方法是附一个 1 在消息后面，后接所要求的多个 0，然后在其后附上 64 位的消息长度（填充前）。这两步的作用是使消息长度恰好是 512 位的整数倍（算法的其余部分要求如此），同时确保不同的消息在填充后不相同。 
-四个 32 位变量初始化为： 
-A=0x01234567 
-B=0x89abcdef 
-C=0xfedcba98 
-D=0x76543210 
-它们称为链接变量（chaining variable） 
-接着进行算法的主循环，循环的次数是消息中 512 位消息分组的数目。 
-将上面四个变量复制到别外的变量中：A 到 a，B 到 b，C 到 c，D 到 d。 
-主循环有四轮（MD4 只有三轮），每轮很相拟。第一轮进行 16 次操作。每次操作对 a，b，c 和 d 中的其中三个作一次非线性函数运算，然后将所得结果加上第四个变量，文本的一个子分组和一个常数。再将所得结果向右环移一个不定的数，并加上 a，b，c 或 d 中之一。最后用该结果取代 a，b，c 或 d 中之一。 
-以一下是每次操作中用到的四个非线性函数（每轮一个）。 
-F(X,Y,Z)=(X&Y)|((~X)&Z) 
-G(X,Y,Z)=(X&Z)|(Y&(~Z)) 
-H(X,Y,Z)=X^Y^Z 
-I(X,Y,Z)=Y^(X|(~Z)) 
-(& 是与,| 是或,~ 是非,^ 是异或) 
+MD5 还广泛用于加密和解密技术上，在很多操作系统中，用户的密码是以 MD5 值（或类似的其它算法）的方式保存的， 用户 Login 的时候，系统是把用户输入的密码计算成 MD5 值，然后再去和系统中保存的 MD5 值进行比较，而系统并不 “知道” 用户的密码是什么。在一些初始化处理后，MD5 以 512 位分组来处理输入文本，每一分组又划分为 16 个 32 位子分组。算法的输出由四个 32 位分组组成，将它们级联形成一个 128 位散列值。
+
+首先填充消息使其长度恰好为一个比 512 位的倍数仅小 64 位的数。填充方法是附一个 1 在消息后面，后接所要求的多个 0，然后在其后附上 64 位的消息长度（填充前）。这两步的作用是使消息长度恰好是 512 位的整数倍（算法的其余部分要求如此），同时确保不同的消息在填充后不相同
+
+四个 32 位变量初始化为：
+
+A=0x01234567
+B=0x89abcdef
+C=0xfedcba98
+D=0x76543210
+
+它们称为链接变量（chaining variable）
+
+接着进行算法的主循环，循环的次数是消息中 512 位消息分组的数目。 将上面四个变量复制到别外的变量中：A 到 a，B 到 b，C 到 c，D 到 d。
+
+主循环有四轮（MD4 只有三轮），每轮很相拟。第一轮进行 16 次操作。每次操作对 a，b，c 和 d 中的其中三个作一次非线性函数运算，然后将所得结果加上第四个变量，文本的一个子分组和一个常数。再将所得结果向右环移一个不定的数，并加上 a，b，c 或 d 中之一。最后用该结果取代 a，b，c 或 d 中之一。
+以一下是每次操作中用到的四个非线性函数（每轮一个）。
+F(X,Y,Z)=(X&Y)|((~X)&Z)
+G(X,Y,Z)=(X&Z)|(Y&(~Z))
+H(X,Y,Z)=X^Y^Z
+I(X,Y,Z)=Y^(X|(~Z))
+(& 是与,| 是或,~ 是非,^ 是异或)
 这些函数是这样设计的：如果 X、Y 和 Z 的对应位是独立和均匀的，那么结果的每一位也应是独立和均匀的。 
 函数 F 是按逐位方式操作：如果 X，那么 Y，否则 Z。函数 H 是逐位奇偶操作符。 
 设 Mj 表示消息的第 j 个子分组（从 0 到 15），<<< s 表示循环左移 s 位，则四种操作为： 
