--- a/Python/高级语法/闭包和装饰器.md
+++ b/Python/高级语法/闭包和装饰器.md
@@ -21,9 +21,12 @@ def funt1(a, b):
     return funt_in
 
 
-f = funt1(3, 4)
+f = funt1(3, 4) 
+# 将funt1 a b两个参数传入 但是并没有执行,因为funt1的返回值是 funt_in 则 f=funt_in
+# 咱函数执行过程中暂时让ab俩个值存活下来
 print(f(1))  # 1*3+4
 print(f(3))  # 3*3+4
+
 >>>7
 >>>13
 ```
@@ -50,7 +53,8 @@ print(f3())
 >>>9
 >>>9
 ```
-
+你是不是以为结果会是1，4，9。
+当解释器运行count外部函数时内部函数f()，是不会执行的，只是运行了三次for循环，则i为3，这时运行f1()，f2()，f3()会取i的平方，得结果为9。
 
 
 # 装饰器
