我本文艺青年

--- a/我本是个文艺青年/关于爱情.md
+++ b/我本是个文艺青年/关于爱情.md
@@ -12,4 +12,12 @@
 
 我翻山越岭，才发现无人等候.
 
+有一个地方叫做稻城，我要和我最心爱的人去那里，看蔚蓝的天空，看白色的雪山，看金黄的草地，看一场秋天的童话.
 
+我逃了很久 拒绝了很多人 后来直到遇见了你 我开始动摇 相信所谓的苦尽甘来 最后发现 你也是骗我的
+
+我这一生，活的肆意且破落。饮过烈酒，爱过烂人，交过损友，始终学不会如何巧妙的游移灾难以及如何安度一生，永远笨拙且热泪盈眶地以为爱，足以抵挡一切。有人说我是为爱而活的人，这大概是我一生当中听过的最好和最坏的话。
+
+再遇到喜欢的人，想来只觉得非常遗憾，早几年遇见就好了，那些热烈、欢喜、年少轻狂和桀骜不驯，连同整个世界都要送给你。可你来得太晚了，我已经学会了一个人送走落日，一个人等待星光，我的爱早在无数个孤立无援的时刻里，变得有了计较和盘算，再也没有曾经的纯粹
+
+![img](关于爱情.assets/v2-086ca04efbebd94a42ea73130ae983b4_hd-1586841454144.jpg)
