--- a/我本是个文艺青年/说人生.md
+++ b/我本是个文艺青年/说人生.md
@@ -63,3 +63,47 @@
 别让任何人，糟蹋了你的人生，
 
 你的人生，要毁也要毁在自己手里。
+
+
+
+**好像还有很多低谷和精彩等着去经历**
+
+**去扑向一盏很亮的灯 去攀登高山**
+
+**去和不喜欢的说再见**
+
+**去填补那些遗憾的空缺**
+
+**这么一想 熬下去还有意义**
+
+**所以**
+
+**祝你前程似锦** 
+
+
+
+我们曾经仰望星空，思考我们在宇宙中的位置，而现在我们只会低着头，担心如何在这片土地上活下去。
+
+这个国家对自己的人民非常苛刻，但是人民似乎从来也不追究国家应该承担的责任，从此方面看，这简直是太奇怪了，因为人民确实从不追究国家的责任
+
+生活在这个世界上，你必须学会把灾难都当做荣幸，因为连你自己的性命都是别人的恩赐，你还有什么权利争取愿望中的自由。
+
+许多人的所谓成熟,不过是被习俗磨去了棱角,变得世故而实际了。那不是成熟,而是精神的早衰和个性的天亡。
+
+真正的成熟,应当是独特个性的形成,真实自我的发现,精神上的结果和丰收。
+
+我们生于此世，则肮脏的事物，不愉快的事物，讨厌的事物，都不可逃避。若不勇往直前冲进那些事物，到头来将一事无成。
+
+你觉得最晚的时候就是最早的时候
+
+人类之所以有进步，主要原因是下一代不怎么听上一代的话
+
+在笼里出生得鸟会以为，飞翔是一种病
+
+我与父亲一年也见不了几次面，就算见了，也像老鼠见了猫时，不是逃跑就是回避。
+
+但是，每当看他他的背时，就会想起小时候背我的那个结实、强壮的背，他曾给与过我那样真挚温暖的力量
+
+你比小时候弱多了，那时的你有梦想，并且做了许多努力，你想考一个好学校，想拥有一群朋友，甚至还偷偷的喜欢过什么人。会熬夜读书，会倾听朋友。可是现在，你见识多了，却再也没有像原来那么坚定的喜欢过谁了，于是越来越孤独。
+
+那一天我21岁，在我一生的黄金时代，我有好多奢望，我想爱，想吃，还想在一瞬间变成天上半明半暗的云，后来我才知道，生活就是个缓慢受锤的过程，人一天天老下去，奢望也一天天消逝，最后变得像挨了锤的牛一样，可是我过二十一岁生日的时候没有预见到这一点。我觉得自己会永远生猛下去，什么也锤不了我
