--- a/我本是个文艺青年/鸡汤.md
+++ b/我本是个文艺青年/鸡汤.md
@@ -1,119 +1,33 @@
-你太累了么?
+他们都假装颓废，你别上当。
 
-没有足够的睡眠吗?
+**每一个想要学习的念头，都有可能是未来的你在向你求救。**
 
-没有足够的经理吗?
+要有最朴素的生活和最遥远的梦想，即使明天天寒地冻，路远马亡。
 
-没有走狗的时间吗?
+**你继续差吧，我不等你了。**
 
-是这些东西现在阻止了你吗?
+放弃不难，但坚持一定很酷。
 
-没有足够的钱吗?
+努力尽今夕，少年犹可夸。
 
-这些真的很必要吗?
+![img](鸡汤.assets/v2-db1113840b8e8c493ba40ed3c34dbdc6_hd.jpg)
 
-还是说真正阻止你的
 
-是你自己?
 
-接口
+你见过母亲羡慕别人的眼神吗？
 
-对于编造他的人来说,
+**半山腰太挤了，你得去山顶看看。**
 
-是十分完美的
+别在最好的年纪辜负最好的自己。
 
-不要自怨自艾
+没有伞的孩子必须奔跑。
 
-不要在意过去
+纵有疾风，我不言弃。
 
-然后告诉大家 你很悲伤
+**你一定要走，走到灯火通明。**
 
-你很委屈,然后再让人们
+先努力让自己发光，你爱的人才能迎光而来。
 
-对你感到遗憾
+坦白说，大城市就是这么现实：只尊重成功。成功就好，没人管你是不是单身，结过几次婚，有没有小孩。实力才是个人最好的注解，其它你随意。无须害怕暴露你的伤痕，只要够努力，你总会为自己赢来尊严、荣誉和更好的人生。所以大城市的冷漠，有时恰恰就是给了每个特定的人，别样的温柔。
 
-或是怜悯
-
-如果你看见我坐在劳斯莱斯里
-
-住着五星六星酒店里过着我圆满地生活
-
-不要嫉妒我
-
-因为这都是我全力以赴拼命换来的
-
-没有任何人帮助我
-
-醒醒吧
-
-唤醒内心沉睡的野兽
-
-游戏已经开始了
-
-赛季已经开始了
-
-你对所在的环境心怀不满吗
-
-做些什么取改变他吧
-
-既然心中有想
-
-那就放手一搏
-
-你要明白
-
-接口
-
-是最没意义的事
-
-它是虚假的
-
-是编造出来的
-
-是谎言
-
-开始停止编造谎言吧
-
-只有真相取打败它
-
-真相就是
-
-你还有时间去改变
-
-你身怀技能
-
-你满腹学识
-
-还有支持、信念、和自律帮助你改变这一切
-
-生命中所有美好的事情都始于挑战
-
-困难的事情就是值得的事情
-
-成功不会无缘无故的 找上你
-
-更不会无故降于你的身上
-
-它不会囊谕登天
-
-其实就是这么简单
-
-成功本就不易
-
-如果你想要，那就拼命获取
-
-这是你的机会
-
-你的舞台
-
-你的机遇
-
-我们其实都知道
-
-不管今天明天
-
-都不会有明天这样的东西
-
-你拥有的只是现在
-
-而当下正是磨练你的时刻
+堕落不是今天多吃一块蛋糕多喝一杯可乐，也不是出门不化精致的妆穿好看的小裙子，更不是晚上没有用神仙水蒸脸仪，堕落是你不能学会爱自己。值得被爱的不是节食到胃痛瘦出的小蛮腰，不是牺牲一两个小时睡眠化出的妆面，更不是穿着无法行动的恨天高和紧身裙。爱美不是坏事，但为了美丽牺牲快乐与健康是坏事。让人嫌弃的是自卑自负愚蠢，让人喜欢的是自信礼貌渊博。爱美没有错，可如果有人因为你腰不够细腿不够长而歧视、攻击你，是他混蛋，你没有错。
